--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-toolbox": "^2.0.0-beta.13",
+    "recharts": "^1.7.1",
+    "superagent": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
